--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@nestjs/apollo": "^10.0.5",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.5",
     "@nestjs/platform-express": "^8.0.0",
     "@nrwl/angular": "13.8.3",
+    "apollo-angular": "^3.0.0",
     "apollo-server-express": "^3.6.3",
     "graphql": "^15.8.0",
     "graphql-tools": "^8.2.0",
